tests/errors/sem_assign3.java
public class sem_assign3 {
public static void main(String[] args){
int value  = "HhkOjtJMn";
}
}